--- a/impex/build.xml
+++ b/impex/build.xml
@@ -84,7 +84,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 	<property name="torque.contextProperties" value="build.properties" />
 	<property file="${user.home}/impex-build.properties" />
 	<property file="build.properties" />
-	<property name="lib.dir" value="lib" />
+	<property name="lib.dir" value="${basedir}/lib" />
 	<property name="torque.lib.dir" value="${lib.dir}" />
 
 	<property name="source.zip" value="${torque.schema.dir}/${torque.project}-data.zip" />
@@ -92,7 +92,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 
 	<typedef resource="org/tigris/subversion/svnant/svnantlib.xml">
 		<classpath>
-			<fileset dir="lib" includes="*.jar" />
+			<fileset dir="${lib.dir}" includes="*.jar" />
 		</classpath>
 	</typedef>
 	
