git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5368 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -42,7 +42,7 @@
 	</target>
 		
 	<target name="dist-external" if="dist.external" depends="init-base-properties">
-		<ant dir="${application.deploy.directory}/${application.java.project" target="dist-external" />
+		<ant dir="${application.deploy.directory}/${application.java.project}" target="dist-external" />
 	</target>
 
 	<target name="dist-ant" unless="maven.build">
