git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5372 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -58,7 +58,7 @@
 
 	<target name="check-modularization" depends="init-properties">
 		<trycatch property="has.error">
-			<try><ant dir="${application.java.project}" target="check-modularization" /></try>
+			<try><ant dir="${application.working.directory}/${application.java.project}" target="check-modularization" /></try>
 			<finally>
 				<fail if="has.error" />
 			</finally>
