git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5373 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra/build.properties
+++ b/kra/build.properties
@@ -1,3 +1,8 @@
+# project properties?
+external.config.directory=/opt
+institution=iu
+ojb.platform=Oracle9i
+
 maven.build=true
 maven.war.filename=kc_project-1.0.1-SNAPSHOT.war
 alt.build.location=/opt/sa_forms/java/dev/kra/kra-config.xml
