fixing lack of copy to ears dir
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5374 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -47,11 +47,12 @@
 
 	<target name="dist-ant" unless="maven.build">
         <ant dir="${application.deploy.directory}/${application.java.project}" target="dist" />
+        <copy file="${application.deploy.directory}/${application.java.project}/${application}-${build.environment}.war" tofile="${application.deploy.directory}/${application}-${build.environment}.war" overwrite="true" />
     </target>
 
     <target name="dist-maven" if="maven.build">
        <maven goals="package" />
-       <copy file="${application.deploy.directory}/${application.java.project}/target/${maven.war.filename}" tofile="${application.deploy.directory}/${application.java.project}/${application}-${build.environment}.war" overwrite="true" verbose="true" />
+       <copy file="${application.deploy.directory}/${application.java.project}/target/${maven.war.filename}" tofile="${application.deploy.directory}/${application}-${build.environment}.war" overwrite="true" verbose="true" />
     </target>
 
     <target name="dist-war" depends="init-properties,dist-ant,dist-maven" />
