make available env-specific prop file
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5380 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
 		<property file="${generated.properties.file}" />
 		<property file="${application.working.directory}/build.properties" />
 		<property file="${working.directory}/build.properties" />
+		<property file="${application.deploy.directory}/build.properties" />
 		<condition property="import.into.mysql">
 			<equals arg1="${datasource.ojb.platform}" arg2="MySQL" />
 		</condition>
