use deploy directory build.properties for these props
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5381 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra/build.properties
+++ b/kra/build.properties
@@ -4,5 +4,5 @@ institution=iu
 ojb.platform=Oracle9i
 
 maven.build=true
-maven.war.filename=kc_project-1.0.1-SNAPSHOT.war
-alt.build.location=/opt/sa_forms/java/dev/kra/kra-config.xml
+#maven.war.filename=kc_project-1.0.1-SNAPSHOT.war
+#alt.build.location=/opt/sa_forms/java/dev/kra/kra-config.xml
