git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5393 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -5,4 +5,6 @@ batch.mailing.list=kbatch-l@indiana.edu
 # to/from email address for mail sent by the incident reporting framework (KualiExceptionIncident, etc.)
 incident.mailing.list=kincident-l@indiana.edu
 
+do.filter.project.help
+
 dist.external=true
