Made the requiredHttp and showPassword fields configurable.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy@5067 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cas/kulcas/pom.xml
+++ b/cas/kulcas/pom.xml
@@ -26,10 +26,8 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
-					<!-- Using 2.0.1 version because webXml doesn't work with latest one  -->
 					<version>2.0.1</version>
-					<configuration>
-						<!-- <dependentWarExcludes>WEB-INF/lib/**, WEB-INF/web.xml</dependentWarExcludes> -->
+					<configuration>						
 					</configuration>
 				</plugin>
 			</plugins>
@@ -69,7 +67,7 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-war-plugin</artifactId>
 						<configuration>
-							<!-- <webXml>src/main/config/rice-web.xml</webXml> -->
+							<webXml>src/main/webapp/WEB-INF/web.xml</webXml>
 						</configuration>
 					</plugin>
 				</plugins>
