--- a/cas/kulcas/src/main/webapp/WEB-INF/cas.properties
+++ b/cas/kulcas/src/main/webapp/WEB-INF/cas.properties
@@ -11,5 +11,5 @@ host.name=cas
 #database.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 database.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
-org.kuali.cas.auth.showPasswordField=true
+org.kuali.cas.auth.showPasswordField=false
 org.kuali.cas.auth.requireHttps=false
