Moved the passwords, etc out of the xml and into a properties files.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy@5068 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cas/kulcas/src/main/webapp/WEB-INF/cas.properties
+++ b/cas/kulcas/src/main/webapp/WEB-INF/cas.properties
@@ -11,5 +11,10 @@ host.name=cas
 #database.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 database.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
+# Kuali additions
 org.kuali.cas.auth.showPasswordField=false
 org.kuali.cas.auth.requireHttps=false
+org.kuali.cas.auth.jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
+org.kuali.cas.auth.jdbc.url=jdbc:oracle:thin:@esdbk02.uits.indiana.edu:1521:KUALI
+org.kuali.cas.auth.jdbc.username=kuldev
+org.kuali.cas.auth.jdbc.password=dev174kul
