--- a/cas/kulcas/src/main/webapp/WEB-INF/cas.properties
+++ b/cas/kulcas/src/main/webapp/WEB-INF/cas.properties
@@ -16,5 +16,5 @@ org.kuali.cas.auth.showPasswordField=false
 org.kuali.cas.auth.requireHttps=false
 org.kuali.cas.auth.jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 org.kuali.cas.auth.jdbc.url=jdbc:oracle:thin:@esdbk02.uits.indiana.edu:1521:KUALI
-org.kuali.cas.auth.jdbc.username=kuldev
-org.kuali.cas.auth.jdbc.password=dev174kul
+org.kuali.cas.auth.jdbc.username=fill me in
+org.kuali.cas.auth.jdbc.password=fill me in
