KULRICE-2619 - fixed an issue in the keepformat attribute of the sql ant target
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7107 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -636,7 +636,7 @@ Please place the jar file for this class in the lib directory and try again.
 			     userid="${import.admin.user}"
 			     password="${import.admin.password}"
 				 onerror="@{onerror}"
-			     keepformat="true"
+			     keepformat="false"
 			     delimitertype="row"
 			     delimiter="/">
 				@{sql}
