--- a/cas/kulcas/src/main/webapp/WEB-INF/web.xml
+++ b/cas/kulcas/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,31 @@
 			/WEB-INF/deployerConfigContext.xml
 		</param-value>
 	</context-param>
+	
+	<context-param>
+		<param-name>org.kuali.cas.auth.requireHttps</param-name>
+		<param-value>false</param-value>
+	</context-param>	
+	<context-param>
+		<param-name>org.kuali.cas.auth.showPasswordField</param-name>
+		<param-value>false</param-value>
+	</context-param>
+	<context-param>
+		<param-name>org.kuali.cas.auth.jdbc.driverClassName</param-name>
+		<param-value>com.mysql.jdbc.Driver</param-value>
+	</context-param>
+	<context-param>
+		<param-name>org.kuali.cas.auth.jdbc.url</param-name>
+		<param-value>jdbc:mysql://localhost:3306/kuldev</param-value>
+	</context-param>
+	<context-param>
+		<param-name>org.kuali.cas.auth.jdbc.username</param-name>
+		<param-value>kuldev</param-value>
+	</context-param>
+	<context-param>
+		<param-name>org.kuali.cas.auth.jdbc.password</param-name>
+		<param-value>kuldev</param-value>
+	</context-param>
 
 	<!-- 
 		place this into the contextConfigLocation to enable remote services
@@ -92,13 +117,7 @@
 			org.jasig.cas.web.init.SafeContextLoaderListener
 		</listener-class>
 	</listener>
- 
-    <listener>
-        <listener-class>
-            org.kuali.kfs.sys.web.ConfigPropertiesExposerListener
-        </listener-class>
-    </listener>
-      
+
 	<!--
 		- This is the Spring dispatcher servlet which delegates all requests to the 
 		- Spring WebMVC controllers as configured in cas-servlet.xml.
