--- a/impex/build.xml
+++ b/impex/build.xml
@@ -95,7 +95,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 			<fileset dir="${lib.dir}" includes="*.jar" />
 		</classpath>
 	</typedef>
-	
+
 	<!--
     The default.properties file will map old properties to the new ones along
     with setting the correct defaults.
@@ -138,6 +138,15 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		         classpathref="torque-classpath"
 		         classname="org.apache.torque.task.TorqueDocumentationTask"
 		/>
+
+		<taskdef name="torque-doc-desc"
+			classpathref="torque-classpath" 
+			classname="org.apache.torque.task.TorqueMergeXMLDoc" />
+		
+		<taskdef name="create-xmlfile-with-blank-desc" 
+				classpathref="torque-classpath"
+				classname="org.apache.torque.task.TorqueXMLWithDesc" />
+
 		<taskdef name="torque-jdbc-transform"
 		         classpathref="torque-classpath"
 		         classname="org.kuali.core.db.torque.KualiTorqueJDBCTransformTask"
@@ -166,7 +175,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		<echo message="loading templates from classpath" />
 
 		<mkdir dir="${torque.sql.dir}"/>
-		
+
 		<property name="torque.sql.absolute.dir" location="${torque.sql.dir}" />
 		<!-- above works around a problem with torque-data-dump getting passed a relative directory, and not working right if tbe process was started from a directory other than ant's basedir -->
 
@@ -183,6 +192,19 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		</torque-sql>
 	</target>
 
+
+	<!-- ================================================================================ -->
+	<!-- G E N E R A T E   S C H E M A D E S C  W I T H  B L A N K  D E S C R I P T I O N -->
+	<!-- ================================================================================ -->
+	<!-- Generates an empty schema-description.xml file                                   -->
+	<!--                                                                                  -->
+	<!-- ================================================================================ -->	
+	<target name="generate-empty-schema-description" depends="inittasks">
+	    <create-xmlfile-with-blank-desc
+	    	inputFileString="${torque.schema.dir}/schema.xml"
+	        outputFileString="${torque.schema.dir}/schema-description.xml"/>
+	</target>
+	
 	<!-- ================================================================ -->
 	<!-- G E N E R A T E   D O C S                                        -->
 	<!-- ================================================================ -->
@@ -201,9 +223,13 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		<echo message="| Generating docs for YOUR datamodel!      |" />
 		<echo message="|                                          |" />
 		<echo message="+------------------------------------------+" />
-
+		
 		<mkdir dir="${torque.schema.dir}/doc" />
 
+	    <torque-doc-desc 
+			dbSchemaString="${torque.schema.dir}/schema.xml" 
+			schemaWithDescString="${torque.schema.dir}/schema-description.xml"/>
+	
 		<torque-doc contextProperties="${torque.contextProperties}"
 		            controlTemplate="${torque.template.doc}"
 		            outputDirectory="${torque.schema.dir}/doc"
@@ -216,6 +242,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 			<fileset dir="${torque.schema.dir}" includes="schema.xml" />
 		</torque-doc>
 	</target>
+
 
 	<!-- ================================================================ -->
 	<!-- I N S E R T  S I N G L E  S Q L  F I L E S                       -->
@@ -463,14 +490,14 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		      fork="true"
 		      dir="${basedir}" 
 		>
-            <classpath path="${java.class.path}" />
-            <jvmarg value="-Xmx1g" />
-            <arg value="-DxmlDataFile=${xmlDataFile}"/>
-            <arg value="-Duser.home=${user.home}" />
-            <arg value="-Dimport.torque.database=${import.torque.database}" />
-            <arg value="-Dtorque.schema.dir=${torque.schema.dir}" />
-            <arg value="-Dtorque.template.dataSql=${torque.template.dataSql}" />
-            <arg value="dataxml-file-to-sql-file" />
+			<classpath path="${java.class.path}" />
+			<jvmarg value="-Xmx1g" />
+			<arg value="-DxmlDataFile=${xmlDataFile}"/>
+			<arg value="-Duser.home=${user.home}" />
+			<arg value="-Dimport.torque.database=${import.torque.database}" />
+			<arg value="-Dtorque.schema.dir=${torque.schema.dir}" />
+			<arg value="-Dtorque.template.dataSql=${torque.template.dataSql}" />
+			<arg value="dataxml-file-to-sql-file" />
 		</java>
 	</target>
 
@@ -552,7 +579,7 @@ Please place the jar file for this class in the lib directory and try again.
 		</fail>
 		<antcall target="test-${import.torque.database}-connection" />
 	</target>
-	
+
 	<target name="test-oracle-connection">
 		<sql driver="${import.torque.database.driver}"
 		     password="${import.torque.database.password}"
@@ -560,7 +587,7 @@ Please place the jar file for this class in the lib directory and try again.
 		     userid="${import.torque.database.user}"
 		     onerror="abort"
 			 classpathref="torque-classpath"
-		>SELECT dummy FROM dual</sql>		
+		>SELECT dummy FROM dual</sql>
 	</target>
 
 	<target name="test-mysql-connection">
@@ -570,9 +597,9 @@ Please place the jar file for this class in the lib directory and try again.
 		     userid="${import.torque.database.user}"
 		     onerror="abort"
 			 classpathref="torque-classpath"
-		>SELECT 1</sql>		
+		>SELECT 1</sql>
 	</target>
-	
+
 	<target name="check-export-properties" depends="inittasks">
 		<condition property="export.properties.set">
 			<and>
@@ -643,7 +670,7 @@ Please place the jar file for this class in the lib directory and try again.
 			</sql>
 		</sequential>
 	</macrodef>
-	
+
 	<macrodef name="impex-sql">
 		<attribute name="sql" />
 		<sequential>
@@ -684,14 +711,14 @@ Please place the jar file for this class in the lib directory and try again.
 	<target name="bootstrap" depends="inittasks">
 		<antcall target="${import.torque.database}-bootstrap" />
 	</target>
-	
+
 	<!-- 
 	   Oracle-specific targets
 	-->
 
 	<target name="oracle-create-user" depends="inittasks">
 	</target>
-	
+
 	<target name="oracle-create-schema" depends="inittasks">
 		<adminsql sql="${oracle.create.user.commands}" onerror="continue" />
 	</target>
@@ -702,13 +729,13 @@ Please place the jar file for this class in the lib directory and try again.
 
 	<target name="oracle-empty-schema" depends="inittasks">
 		<adminsql sql="${oracle.empty.schema.commands}" />
-	</target>	
+	</target>
 
 	<target name="oracle-bootstrap" depends="inittasks">
 		<bootstrapsql file="create_admin_user.sql" user="${oracle.usermaint.user}" password="${oracle.usermaint.password}" />
 		<bootstrapsql file="kuluser_maint_pk.sql" user="${oracle.usermaint.user}" password="${oracle.usermaint.password}" />
 	</target>
-	
+
 	<!--
 	    MySQL-specific targets
 	-->
@@ -720,15 +747,15 @@ Please place the jar file for this class in the lib directory and try again.
 	<target name="mysql-create-schema" depends="inittasks">
 		<adminsql sql="${mysql.create.schema.commands}" onerror="continue" />
 	</target>
-	
+
 	<target name="mysql-drop-schema" depends="inittasks">
 		<adminsql sql="${mysql.drop.schema.commands}" />
 	</target>
-	
+
 	<target name="mysql-empty-schema" depends="inittasks,mysql-drop-schema,mysql-create-schema" />
-	
+
 	<target name="mysql-bootstrap" depends="inittasks" />
-	
+
 	<!-- ================================= 
           target: build              
          ================================= -->
@@ -789,7 +816,7 @@ Please place the jar file for this class in the lib directory and try again.
 	<!-- assumes that this module has been checked out as ${torque.schema.dir} from SVN
 	     is performs an update on the current export user directory and then runs the import process
 	     -->
-	
+
 	<target name="satellite-update">
 		<available file="${torque.schema.dir}" property="data.dir.exists" />
 		<antcall target="satellite-init" />
@@ -803,13 +830,13 @@ Please place the jar file for this class in the lib directory and try again.
 		<delete dir="${torque.schema.dir}/datasql" failonerror="false" />
 		<antcall target="import" />
 	</target>
-	
+
 	<target name="satellite-init" unless="data.dir.exists">
 		<delete dir="${torque.schema.dir}" />
-		<echo>Running SVN checkout to ${torque.schema.dir}</echo>		
+		<echo>Running SVN checkout to ${torque.schema.dir}</echo>
 		<svn>
 			<checkout url="${svnroot}/${svn.module}/${svn.base}" destPath="${torque.schema.dir}" />
 		</svn>
 	</target>
-	
+
 </project>
