KULRICE-3178 - added support for a validation query to the kuali cas server
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cas/trunk@5097 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,10 @@
 		<param-name>org.kuali.cas.auth.jdbc.password</param-name>
 		<param-value>${org.kuali.cas.auth.jdbc.password}</param-value>
 	</context-param>
+	<context-param>
+		<param-name>org.kuali.cas.auth.jdbc.validationQuery</param-name>
+		<param-value>${org.kuali.cas.auth.jdbc.validationQuery}</param-value>
+	</context-param>
 
 	<!-- 
 		place this into the contextConfigLocation to enable remote services
