Added new properties to support needed URLs for the CAS server
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5471 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -8,3 +8,8 @@ incident.mailing.list=kincident-l@indiana.edu
 do.filter.project.help
 
 dist.external=true
+
+cas.url=https://test.kuali.org/cas-stg
+# this should be the host name and port if the KFS instance - no path
+cas.kfs.server.name=https://test.kuali.org
+
