Added commented out new properties to impex sample properties file.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7115 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/impex-build.properties.sample
+++ b/impex/impex-build.properties.sample
@@ -26,6 +26,15 @@ svn.base=trunk
 #
 torque.schema.dir=../../${svn.module}
 torque.sql.dir=${torque.schema.dir}/sql
+
+# if you want to import a second set of schema files (kfs overlay on a rice base DB)
+# uncomment the following lines and set appropriately
+#svn.module.2=kfs-cfg-dbs
+#svn.base.2=trunk
+#torque.schema.dir.2=../../${svn.module.2}
+#torque.sql.dir.2=${torque.schema.dir.2}/sql
+
+
 #
 # where to find JDBC drivers
 #
