Fixed sample file to include another needed property for the 2nd import project.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7116 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/impex-build.properties.sample
+++ b/impex/impex-build.properties.sample
@@ -29,6 +29,7 @@ torque.sql.dir=${torque.schema.dir}/sql
 
 # if you want to import a second set of schema files (kfs overlay on a rice base DB)
 # uncomment the following lines and set appropriately
+#svnroot.2=https://test.kuali.org/svn/
 #svn.module.2=kfs-cfg-dbs
 #svn.base.2=trunk
 #torque.schema.dir.2=../../${svn.module.2}
