KULRICE-2011 - made changes to kul-cfg-envs to facilitate import of seperate Rice/KFS databases
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5472 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -51,6 +51,13 @@
 		<delete file="${log.file}" />
 	</target>
 	
+	<target name="import-no-empty-schema" depends="init-properties">
+		<ant antfile="${impex.build.file}" target="import" inheritall="false">
+			<property name="impex.properties.file" value="${impex.properties.file}"/>
+		</ant>
+		<delete file="${log.file}" />
+	</target>
+	
 	<target name="dist-external" if="dist.external" depends="init-properties">
 		<ant dir="${application.deploy.directory}/${application.java.project}" target="dist-external" />
 	</target>
