--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -9,7 +9,7 @@ do.filter.project.help
 
 dist.external=true
 
-cas.url=https://test.kuali.org/cas-stg
-# this should be the host name and port if the KFS instance - no path
 cas.kfs.server.name=https://test.kuali.org
+cas.url=${cas.kfs.server.name}/cas-stg
+
 
