git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5498 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@ appserver.home=/usr/local/tomcat/${project.server}
 appserver.lib.dir=/usr/local/tomcat/default/common/lib
 appserver.deploy.dir=${appserver.home}/webapps
 appserver.config.dir=${appserver.home}/conf/Catalina/localhost
-appserver.url=https://test.kuali.org/
+appserver.url=https://test.kuali.org
 
 mysql.impex.properties.file=${working.directory}/mysql-impex.properties
 oracle.impex.properties.file=${working.directory}/oracle-impex.properties
