--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -1,14 +1,9 @@
-# determines the mail relay server used by MailService
 mail.relay.server=mail-relay.iu.edu
-# from email adress for mail sent by the batch framework (JobListener and other) and to email address for job failure messages
 batch.mailing.list=kbatch-l@indiana.edu
-# to/from email address for mail sent by the incident reporting framework (KualiExceptionIncident, etc.)
 incident.mailing.list=kincident-l@indiana.edu
-
 do.filter.project.help
-
 dist.external=true
-
+custom.context.content=<Manager className="org.apache.catalina.session.StandardManager" maxActiveSessions="250" />
 cas.kfs.server.name=https://test.kuali.org
 cas.url=${cas.kfs.server.name}/cas-stg
 
