--- a/impex/build.xml
+++ b/impex/build.xml
@@ -125,7 +125,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 			<fileset dir="${torque.lib.dir}" includes="*.jar" />
 			<fileset dir="${drivers.directory}" includes="${drivers.file.pattern}" />
 		</path>
-		<taskdef resource="net/sf/antcontrib/antcontrib.properties">
+		<taskdef resource="net/sf/antcontrib/antlib.xml">
 			<classpath>
 				<pathelement location="lib/ant-contrib-1.0b3.jar" />
 			</classpath>
@@ -498,7 +498,19 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		<unzip dest="${torque.schema.dir}" src="${source.zip}" overwrite="true" />
 	</target>
 
-	<target name="import" depends="check-import-properties,create-ddl,apply-ddl,dataxml-to-sql,apply-data-sql,apply-constraint-ddl" description="==> Main Import Task">
+	<target name="pre-import-sql" if="pre.import.script.files">
+		<for list="${pre.import.script.files}" param="fileName" trim="true" keepgoing="false" parallel="false">
+			<run-sql-file file="@{fileName}" />
+		</for>
+	</target>
+
+	<target name="post-import-sql" if="post.import.script.files">
+		<for list="${post.import.script.files}" param="fileName" trim="true" keepgoing="false" parallel="false">
+			<run-sql-file file="@{fileName}" />
+		</for>
+	</target>
+	
+	<target name="import" depends="check-import-properties,create-ddl,pre-import-sql,apply-ddl,dataxml-to-sql,apply-data-sql,apply-constraint-ddl,post-import-sql" description="==> Main Import Task">
 	</target>
 
 	<target name="export" depends="check-export-properties,jdbc-to-xml,export-data,doc" description="==> Main Export Task - doesn't work when using OCI JDBC connection">
@@ -593,6 +605,14 @@ Please place the jar file for this class in the lib directory and try again.
 		</sequential>
 	</macrodef>
 
+	<macrodef name="run-sql-file">
+		<attribute name="file" />
+		<sequential>
+			<echo>Running File: @{file}</echo>
+			<sql driver="${import.torque.database.driver}" classpathref="torque-classpath" url="${import.torque.database.url}" userid="${import.torque.database.user}" password="${import.torque.database.password}" keepformat="true" delimitertype="row" delimiter="/" src="@{file}" />
+		</sequential>
+	</macrodef>
+	
 	<macrodef name="adminsql">
 		<attribute name="sql" />
 		<attribute name="onerror" default="abort" />
