Add <sequential> </sequential> in the pre-import-sql and post-import-sql targets
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7120 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -500,13 +500,17 @@ Note: Due to java native library classloader issues, the export routine (and pos
 
 	<target name="pre-import-sql" if="pre.import.script.files">
 		<for list="${pre.import.script.files}" param="fileName" trim="true" keepgoing="false" parallel="false">
-			<run-sql-file file="@{fileName}" />
+			<sequential>
+				<run-sql-file file="@{fileName}" />
+			</sequential>
 		</for>
 	</target>
 
 	<target name="post-import-sql" if="post.import.script.files">
 		<for list="${post.import.script.files}" param="fileName" trim="true" keepgoing="false" parallel="false">
-			<run-sql-file file="@{fileName}" />
+			<sequential>
+				<run-sql-file file="@{fileName}" />
+			</sequential>
 		</for>
 	</target>
 	
