--- a/impex/build.xml
+++ b/impex/build.xml
@@ -151,6 +151,8 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		<echo message="| Generating SQL for YOUR Torque project!  |" />
 		<echo message="|                                          |" />
 		<echo message="+------------------------------------------+" />
+		<echo message="torque.schema.dir: ${torque.schema.dir}" />
+		<echo message="torque.sql.dir: ${torque.sql.dir}" />
 
 		<property name="torque.sql.absolute.dir" location="${torque.sql.dir}" />
 		<!-- above works around a problem with torque-data-dump getting passed a relative directory, and not working right if tbe process was started from a directory other than ant's basedir -->
@@ -316,7 +318,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		<echo message="| Generating XML from JDBC connection !         |" />
 		<echo message="|                                               |" />
 		<echo message="+-----------------------------------------------+" />
-
+		<echo message="torque.schema.dir: ${torque.schema.dir"/>
 		<property name="torque.schema.absolute.dir" location="${torque.schema.dir}" />
 		<!-- above works around a problem with torque-jdbc-transform getting passed a relative directory, and not working right if tbe process was started from a directory other than ant's basedir -->
 
