--- a/impex/build.xml
+++ b/impex/build.xml
@@ -159,6 +159,8 @@ Note: Due to java native library classloader issues, the export routine (and pos
 
 		<create-ddl-macro torque.sql.dir="${torque.sql.dir}" torque.schema.dir="${torque.schema.dir}" torque.sql.absolute.dir="${torque.sql.absolute.dir}" />
 
+		<echo message="import.two.schemas: ${import.two.schemas}"/>
+		<echo message="import.torque.database: ${import.torque.database}"/>
 		<!-- now create-ddl for the second schema, if defined -->
 		<if>
 			<isset property="import.two.schemas" />
@@ -318,7 +320,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		<echo message="| Generating XML from JDBC connection !         |" />
 		<echo message="|                                               |" />
 		<echo message="+-----------------------------------------------+" />
-		<echo message="torque.schema.dir: ${torque.schema.dir"/>
+		<echo message="torque.schema.dir: ${torque.schema.dir}"/>
 		<property name="torque.schema.absolute.dir" location="${torque.schema.dir}" />
 		<!-- above works around a problem with torque-jdbc-transform getting passed a relative directory, and not working right if tbe process was started from a directory other than ant's basedir -->
 
