KULRICE-3475 - for client app db imports, rice dbs project needs to be checked out under the client app dir to avoid scheduling conflicts
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5520 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -52,6 +52,7 @@
 	</target>
 	
 	<target name="import-no-empty-schema" depends="init-properties">
+		<echo message="impex-properties file in import-no-empty-schema: ${impex.properties.file}"/>
 		<ant antfile="${impex.build.file}" target="import" inheritall="false">
 			<property name="impex.properties.file" value="${impex.properties.file}"/>
 		</ant>
