KULRICE-3475 - for client app db imports, rice dbs project needs to be checked out under the client app dir to avoid scheduling conflicts
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/kulrice3475@7124 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -788,7 +788,7 @@ Please place the jar file for this class in the lib directory and try again.
 		<attribute name="torque.schema.dir" />
 		<sequential>
 			<echo>Running SVN update in @{torque.schema.dir}</echo>
-			<svn>
+			<svn javahl="false">
 				<update dir="@{torque.schema.dir}" />
 			</svn>
 		</sequential>
@@ -834,7 +834,7 @@ Please place the jar file for this class in the lib directory and try again.
 		<sequential>
 			<delete dir="@{torque.schema.dir}" />
 			<echo>Running SVN checkout to @{torque.schema.dir}</echo>
-			<svn>
+			<svn javahl="false">
 				<checkout url="@{svnroot}/@{svn.module}/@{svn.base}" destPath="@{torque.schema.dir}" />
 			</svn>
 		</sequential>
