Reverted changes made for KULRICE-3475; those changes are contained within branches/kulrice3475
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7125 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.properties
+++ b/impex/build.properties
@@ -82,10 +82,10 @@ import.admin.url = jdbc:mysql://localhost:3306/
 torque.sameJavaName = false
 torque.useClasspath=true
 
-#output.dir=../${torque.project}/${export.torque.database.user}
+output.dir=../${torque.project}/${export.torque.database.user}
 
-#torque.output.dir=${output.dir}
-#torque.schema.dir=${output.dir}
+torque.output.dir=${output.dir}
+torque.schema.dir=${output.dir}
 
 drivers.directory = lib
 drivers.file.pattern=ojdbc*.jar,mysql*.jar
