last commit before reverting
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5524 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex-build-template.properties
+++ b/impex-build-template.properties
@@ -2,7 +2,7 @@ drivers.directory=/usr/local/tomcat/kuali/common/lib
 drivers.file.pattern=ojdbc*.jar,mysql*.jar
 output.dir=${basedir}/${application.java.project}/${application.database.project}
 torque.schema.dir=${output.dir}
-torque.sql.dir=${output.dir}/sql
+torque.sql.dir=${torque.schema.dir}/sql
 
 # uncomment this to skip some of the larger (and mostly unnecessary) tables in the system
 # import.exclude.data.pattern=LD_LDGR_ENTR_T.xml,GL_BALANCE_T.xml,GL_ENTRY_T.xml,LD_LDGR_BAL_T.xml,GL_ACCT_BALANCES_T.xml
