--- a/impex-build-template.properties
+++ b/impex-build-template.properties
@@ -1,8 +1,6 @@
 drivers.directory=/usr/local/tomcat/kuali/common/lib
 drivers.file.pattern=ojdbc*.jar,mysql*.jar
-output.dir=${basedir}/${application.java.project}/${application.database.project}
-torque.schema.dir=${output.dir}
-torque.sql.dir=${torque.schema.dir}/sql
+output.dir=${basedir}/${application.database.project}
 
 # uncomment this to skip some of the larger (and mostly unnecessary) tables in the system
 # import.exclude.data.pattern=LD_LDGR_ENTR_T.xml,GL_BALANCE_T.xml,GL_ENTRY_T.xml,LD_LDGR_BAL_T.xml,GL_ACCT_BALANCES_T.xml
