--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -4,6 +4,7 @@ incident.mailing.list=kincident-l@indiana.edu
 do.filter.project.help
 dist.external=true
 custom.context.content=<Manager className="org.apache.catalina.session.StandardManager" maxActiveSessions="250" />
+rice.standalone=true
 cas.kfs.server.name=https://test.kuali.org
 cas.url=${cas.kfs.server.name}/cas-stg
 
