rolling back rice standalone until get further info from rice team
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5532 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -4,7 +4,7 @@ incident.mailing.list=kincident-l@indiana.edu
 do.filter.project.help
 dist.external=true
 custom.context.content=<Manager className="org.apache.catalina.session.StandardManager" maxActiveSessions="250" />
-rice.standalone=true
+# rice.standalone=true
 cas.kfs.server.name=https://test.kuali.org
 cas.url=${cas.kfs.server.name}/cas-stg
 
