kfs w/ standalone rice
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5536 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -4,8 +4,9 @@ incident.mailing.list=kincident-l@indiana.edu
 do.filter.project.help
 dist.external=true
 custom.context.content=<Manager className="org.apache.catalina.session.StandardManager" maxActiveSessions="250" />
-# rice.standalone=true
-cas.kfs.server.name=https://test.kuali.org
+rice.standalone=true
+rice.url=${appserver.url}/krkul-${build.environment}
+cas.kfs.server.name=${appserver.url}
 cas.url=${cas.kfs.server.name}/cas-stg
 
 
