git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5555 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -11,6 +11,9 @@
 		<condition property="import.into.mysql">
 			<equals arg1="${datasource.ojb.platform}" arg2="MySQL" />
 		</condition>
+		<condition property="rice.url" value="${appserver.url}/krkul-${build.environment}">
+			<equals arg1="rice.standalone" arg2="true" />
+		</condition>
 		<property name="maven.build.properties" value="build.properties" />
 	</target>
 	
