--- a/build.properties
+++ b/build.properties
@@ -3,6 +3,7 @@ appserver.lib.dir=/usr/local/tomcat/default/common/lib
 appserver.deploy.dir=${appserver.home}/webapps
 appserver.config.dir=${appserver.home}/conf/Catalina/localhost
 appserver.url=https://test.kuali.org
+external.config.directory=/opt
 
 mysql.impex.properties.file=${working.directory}/mysql-impex.properties
 oracle.impex.properties.file=${working.directory}/oracle-impex.properties
