Updated build properties with concrete values for server deployment.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5563 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -5,4 +5,5 @@ do.filter.project.help
 dist.external=true
 custom.context.content=<Manager className="org.apache.catalina.session.StandardManager" maxActiveSessions="250" />
 
-
+deploy.local.rice.server=false
+deploy.local.cas.server=false
