--- a/build.properties
+++ b/build.properties
@@ -4,6 +4,7 @@ appserver.deploy.dir=${appserver.home}/webapps
 appserver.config.dir=${appserver.home}/conf/Catalina/localhost
 appserver.url=https://test.kuali.org
 external.config.directory=/opt
+cas.url=https://test.kuali.org/cas-stg
 
 mysql.impex.properties.file=${working.directory}/mysql-impex.properties
 oracle.impex.properties.file=${working.directory}/oracle-impex.properties
